fix jumpnav hidden by logo

--- a/assets/targets/components/inpage-navigation/_jumpnav.scss
+++ b/assets/targets/components/inpage-navigation/_jumpnav.scss
@@ -80,6 +80,10 @@
 .uomcontent #outer {
   @extend %jump;
 
+  @include breakpoint(desktop) {
+    @include rem(padding-top, 80px);
+  }
+  
   @include breakpoint(wide) {
     display: table;
     margin-top: 33px;
